Changes for 3.2.5rc1

New features:

Bug fixes:
..F....... [ZBX-11984] fixed host hyperlink style on event details page (gcalenko)
.......PS. [ZBX-11807] fixed poller stalling due to incorrect handling of unixODBC library (viktors)
..F....... [ZBX-11877] fixed undefined index when trigger.lastEvent was not set (gcalenko)
A......... [ZBX-9358] improved randomness in session ID generation (vmurzins)
..F....... [ZBX-11933] added fullscreen parameter in link to submap in maps (vmurzins)
A......... [ZBX-11893] fixed permission issue, when importing hosts that are monitored by proxy by Zabbix Admin type user (vmurzins)
..F....... [ZBX-11905] fixed redirect to original requested page after login (vmurzins)
..F....... [ZBX-11907] fixed undefined index in event details page (miks)
........S. [ZBX-11931] fixed trigger lastchange update (wiper)
.......PS. [ZBX-11864] fixed formatting of URLs if an IPv6 is used in simple HTTPS checks (abs)
........S. [ZBX-11738] fixed performing actions for problemas that have started and resolved while another problems escalation is executed (vikotrs)
..F....... [ZBX-6851] fixed zero number display in Event ID column in windows eventlog history (vmurzins)
........S. [ZBX-11829] fixed generation of problems in multiple event mode (Sergejs)
..F....... [ZBX-11624] fixed undefined index error for regular expressions form (vmurzins)
.......PS. [ZBX-11855] fixed data truncation when escaping strings that contain carriage return (vso)
........S. [ZBX-11444] fixed incorrect check for time functions in recovery expressions (abs)
.......PS. [ZBX-11758] fixed crash in web monitoring when variable is empty or the first step was called regexp function on Solaris (Sergejs)
.......PS. [ZBX-11765] fixed incorrect rollback in process of escalation for DB2 database (Sergejs)

--------------------------------------------------------------------------------
Changes for 3.2.4

New features: